add extra resources

--- a/Lecture 6/Data Visualization_Static.ipynb
+++ b/Lecture 6/Data Visualization_Static.ipynb
@@ -46,6 +46,10 @@
     "$$\n",
     "\n",
     "\n",
+    "### [Plotting with Python: learn 80 plots STEP by STEP](https://www.kaggle.com/python10pm/plotting-with-python-learn-80-plots-step-by-step)\n",
+    "\n",
+    "\n",
+    "\n",
     "### Lecture outline\n",
     "\n",
     "---\n",
