add extra resources

--- a/Lecture 4/Data_Cleaning_and_Preparation.ipynb
+++ b/Lecture 4/Data_Cleaning_and_Preparation.ipynb
@@ -13,6 +13,14 @@
     "During the course of doing data analysis and modeling, a significant amount of time is spent on data preparation: loading, cleaning, transforming, and rearranging. Such tasks often takes 80% or more of an analyst’s time. Sometimes the way that data is stored in files or databases is not in the right format for a particular task. Fortunately, pandas, along with the built-in Python language features, provides you with a high-level, flexible, and fast set of tools to enable you to manipulate data into the right form.\n",
     "\n",
     "\n",
+    "\n",
+    "$$\n",
+    "$$\n",
+    "\n",
+    "### [Pandas 100 tricks](https://www.kaggle.com/python10pm/pandas-100-tricks)\n",
+    "\n",
+    "\n",
+    "\n",
     "### Lecture outline\n",
     "\n",
     "---\n",
