update project notebook

--- a/Lecture 11/Regression/workshop_1_car_price_prediction(complete).ipynb
+++ b/Lecture 11/Regression/workshop_1_car_price_prediction(complete).ipynb
@@ -4,7 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Car Price Prediction\n"
+    "# Car Price Prediction\n",
+    "\n",
+    "\n",
+    "## Resources\n",
+    "\n",
+    "[A Detailed Regression Guide with House-pricing](https://www.kaggle.com/masumrumi/a-detailed-regression-guide-with-house-pricing)"
    ]
   },
   {
@@ -1914,7 +1919,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   },
   "toc": {
    "base_numbering": 1,
